--- a/examples/hello-triangle/Cargo.toml
+++ b/examples/hello-triangle/Cargo.toml
@@ -15,7 +15,7 @@ bytemuck.workspace = true
 env_logger.workspace = true
 pollster.workspace = true
 wgpu.workspace = true
-winit.workspace = true
+winit = { git = "https://github.com/rust-windowing/winit", rev = "ffb46dd61f5979f0870b3240ad72d33afd622171" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook.workspace = true
